--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 </head>
 <body>
     <div id="container">
-        
+        <div class="header">
+            <p>etch a sketch project</p>
+        </div>
+
+        <input type="button" onclick="regenerateGrid()">
     </div>
 </body>
 </html>
