Added buttons for resetting and removing the grid.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
             <p>etch a sketch project</p>
         </div>
 
-        <input type="button" onclick="regenerateGrid()">
+        <div id="buttons">
+            <input id="remove-grid-button" type="button" onclick="regenerateGrid()" value="REMOVE GRID">
+            <input id="reset-grid-button" type="button" onclick="regenerateGrid()" value="RESET GRID">
+        </div>
     </div>
 </body>
 </html>
