Added the reset grid button.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         </div>
 
         <div id="buttons">
-            <input id="remove-grid-button" type="button" onclick="regenerateGrid()" value="REMOVE GRID">
-            <input id="reset-grid-button" type="button" onclick="regenerateGrid()" value="RESET GRID">
+            <input id="reset-grid-button" type="button" onclick="resetGrid()" value="RESET GRID">
         </div>
     </div>
 </body>
