--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
 
         <div id="buttons">
+            <input id="change-grid-button" type="button" onclick="changeGrid()" value="CHANGE GRID">
             <input id="reset-grid-button" type="button" onclick="resetGrid()" value="RESET GRID">
         </div>
     </div>
