--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="app.js" defer></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Etch a Sketch</title>
 </head>
 <body>
     <div id="container">
@@ -15,7 +15,6 @@
         </div>
 
         <div id="buttons">
-            <input id="change-grid-button" type="button" onclick="changeGrid()" value="CHANGE GRID">
             <input id="reset-grid-button" type="button" onclick="resetGrid()" value="RESET GRID">
         </div>
     </div>
