Scrapped the new grid button, added the reset button back, and also the input number field, where the user can enter the number for the required grid to be created.

--- a/index.html
+++ b/index.html
@@ -14,8 +14,11 @@
             <p>etch a sketch project</p>
         </div>
 
-        <div id="buttons">
-            <input id="reset-grid-button" type="button" onclick="resetGrid()" value="RESET GRID">
+        <div id="buttons-and-grid">
+            <div id="buttons">
+                <input type="number" id="quantity" name="quantity" placeholder="create your grid" min="2">
+                <input id="reset-grid-button" type="button" value="RESET GRID">
+            </div>
         </div>
     </div>
 </body>
